--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,26 +2,61 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+/* защото искаме дясната колона от грида да е една идея по голяма от лявата и този className го
+използваме в компонента Hero.js */
+section.hero {
+    @apply grid;
+    grid-template-columns: .4fr .6fr;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
+
+input[type="email"],
+input[type="password"],
+input[type="text"],
+input[type="tel"] {
+    @apply block w-full mb-4 rounded-xl;
+    @apply border p-2 border-gray-300 bg-gray-100;
 }
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+label {
+    @apply text-gray-500 text-sm;
+}
+label+ input {
+    margin-top: -2px;
+}
+
+input[type="email"]:disabled,
+input[type="password"]:disabled,
+input[type="tel"]:disabled,
+input[type="text"]:disabled {
+    @apply bg-orange-200 cursor-not-allowed text-gray-400 border-0;
+}
+
+/* когато имаме точка отпред означава че е за className,тоест този дизайн ще е и за buttin и за className който сме създали и се казва button */
+button, .button{
+    @apply flex w-full justify-center gap-2 text-gray-700 font-semibold;
+    @apply border border-gray-300 rounded-xl px-6 py-2;
+}
+
+/* .submit  ще значи всичко което има className='submit' в него */
+button[type="submit"],
+.submit {
+    @apply border-primary bg-primary text-white;
+}
+
+button[type="submit"]:disabled,
+.submit:disabled {
+    @apply cursor-not-allowed;
+}
+
+
+/* this syntax means everything which is child to div.tabs will get this designs */
+div.tabs > * {
+  @apply bg-gray-300 text-gray-500 rounded-full py-2 px-4;
+}
+
+/* components/layouts/userTabs.js dolu v return sme slojili tazi logika za da moje da se promeni dizaina na aktivniq element  */
+/* everything which is child to div.tabs and is with class active  */
+div.tabs > *.active {
+    @apply bg-primary text-white;
 }
