--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -21,7 +21,8 @@ input[type="tel"] {
 label {
     @apply text-gray-500 text-sm;
 }
-label+ input {
+
+label+input {
     margin-top: -2px;
 }
 
@@ -33,14 +34,16 @@ input[type="text"]:disabled {
 }
 
 /* когато имаме точка отпред означава че е за className,тоест този дизайн ще е и за buttin и за className който сме създали и се казва button */
-button, .button{
+button,
+.button {
     @apply flex w-full justify-center gap-2 text-gray-700 font-semibold;
     @apply border border-gray-300 rounded-xl px-6 py-2;
 }
 
 /* .submit  ще значи всичко което има className='submit' в него */
 button[type="submit"],
-.submit {
+.submit,
+button.primary {
     @apply border-primary bg-primary text-white;
 }
 
@@ -51,12 +54,12 @@ button[type="submit"]:disabled,
 
 
 /* this syntax means everything which is child to div.tabs will get this designs */
-div.tabs > * {
-  @apply bg-gray-300 text-gray-500 rounded-full py-2 px-4;
+div.tabs>* {
+    @apply bg-gray-300 text-gray-500 rounded-full py-2 px-4;
 }
 
 /* components/layouts/userTabs.js dolu v return sme slojili tazi logika za da moje da se promeni dizaina na aktivniq element  */
 /* everything which is child to div.tabs and is with class active  */
-div.tabs > *.active {
+div.tabs>*.active {
     @apply bg-primary text-white;
 }
