--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -9,7 +9,7 @@ section.hero {
     grid-template-columns: .4fr .6fr;
 }
 
-
+select,
 input[type="email"],
 input[type="password"],
 input[type="text"],
